chore: fix verify command to not run GitHub live integration tests (#565)